# automated-employee-evaluation-system

./: .gitignore  Makefile  README.md  pyproject.toml  req.txt
api/config/: __init__.py  alembic.ini  logger.py  settings.py
api/config/jinja_templates/common/: common_table.html  parametr_form_script.html
api/config/jinja_templates/email/: account_login_message.html
api/config/jinja_templates/parametrs_form/: parametrs_from.html
api/config/jinja_templates/summary_table/: summary_table.html
api/config/jinja_templates/table_maker/: document_table.html
api/config/static/css/: parametr_form_css.css
api/config/static/js/: redirect_btn_script.js  script.js
api/core/: validation.py
api/core/dto/: __init__.py  base.py  service.py  service_roles.py  user.py
api/core/dto/email/: __init__.py  account_login_message.py
api/core/entities/: __init__.py  service.py  user.py
api/core/exceptions/: __init__.py  base.py  repository.py  service.py  service_roles.py  user.py
api/core/interactors/: __init__.py  base.py
api/core/interactors/service/: __init__.py  create.py  delete.py  get.py  update.py
api/core/interactors/service_roles/: get.py  (+4 more)
api/core/protocols/: __init__.py  email_sender.py  uow.py
api/core/services/: __init__.py  auth.py  user.py
api/infrastructure/email/: __init__.py  email_sender.py
api/infrastructure/excel/: table_maker_3.xlsx
api/infrastructure/storage/: __init__.py  uow.py
api/presentation/api/: main.py  middlewares.py  open_api.py  routes.py
deploy/: .env.example  DockerfileBackend  dev.docker-compose.yml  docker-compose.yml
(+59 files in other folders)
