[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["mihey <daniil5389@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
jinja2 = "^3.1.4"
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
fastapi = "^0.115.0"
passlib = "^1.7.4"
pytz = "^2024.2"
asyncpg = "^0.29.0"
jwt = "^1.3.1"
pyjwt = "^2.9.0"
greenlet = "^3.1.1"

[tool.poetry.group.linter.dependencies]
mypy = "^1.2.0"
flake8 = "^6.0.0"
flake8-print = "^5.0.0"
flake8-pyproject = "^1.2.3"
black = "^23.3.0"
isort = "^5.13.2"

[tool.black]
line-length = 79
include = '\.pyi?$'

[tool.flake8]
exclude = ['.git','__pycache__', '.env', 'venv', 'alembic', 'node_modules']
max-line-length = 79
max-complexivity = 8
ignore = ['E501', 'W503', 'I201', 'I100', 'I101', 'E203', 'E701', 'E704']
per-file-ignores = [
    '__init__.py:F401',
    '__init__.py:E501',
]

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 79


[tool.pytest]

[tool.pytest.ini_options]
asyncio_mode="auto"
python_files = [
    "tests/*.py",
    "tests/**/*.py",
]
python_classes = [
    "Test*",
    "*Test",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
